# rust_graphql_server

./: database.dbml  docker-compose.yaml  init.sql
crates/server/: Cargo.toml  docker-compose.yaml  schema.graphql
crates/server/entities/: Cargo.toml
crates/server/entities/src/: comments.rs  lib.rs  post.rs  posts.rs  prelude.rs  users.rs
crates/server/graphql/: Cargo.toml
crates/server/graphql/src/: lib.rs  models.rs  mutations.rs  queries.rs  schema.rs
crates/server/infrastructure/: Cargo.toml
crates/server/src/: generate_schemas.rs  main.rs
crates/utils/tests/: test.rs
db/: dockerfile
