[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.30"
sea-orm = { version = "0.12.15", features = ["sqlx-postgres", "runtime-tokio-rustls", "debug-print"] }
utils = { path = "../utils" }
migration = { path = "./migration" }
actix-web = "4.8.0"
dotenvy = "0.15.7"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
async-graphql = "7.0.6"
async-graphql-actix-web = "7.0.6"
