[package]
name = "server"
version = "0.1.0"
edition = "2021"
default-run = "server"

[dependencies]
futures = "0.3.30"
sea-orm = { version = "1.0.0", features = ["sqlx-postgres", "runtime-tokio-rustls", "debug-print"] }
utils = { path = "../utils" }
actix-web = "4.8.0"
dotenvy = "0.15.7"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
async-graphql = "7.0.7"
async-graphql-actix-web = "7.0.7"
entities = { path = "entities" }
graphql = { path = "graphql" }
infrastructure = { path = "infrastructure" }

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "generate-schemas"
path = "src/generate_schemas.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
